@startuml
hide methods
left to right direction

class Company
class Administrator
class ParameterCategory
class TestType

TestType "*" -- "1" Company : < conducts

TestType "*" -- "1" Administrator : < creates

Administrator "1" -- "*" ParameterCategory : < created by

skinparam classAttributeIconSize 0

class Company{
-designation
}

class Administrator{
-name
-address
-phoneNumber
-employeeID
-orgRole
-email
-SOCcode
}

class ParameterCategory{
-code
-description
-nhsID
}

class TestType{
-code
-description
-collectingMethod
}

@enduml